Windows: Fix bug where windows stopped painting after a restore.

Usually, a window get un-exposed when minimized, and exposed
after the first WM_Paint event when restored.

With layered windows (translucent+frameless) we never receive
a WM_Paint, so lets send the expose event when the window is
restired.

Task-number: QTBUG-17548

Change-Id: Ib56d8abd91b15f9238d223fe692b19a3d2c930b7
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>